--- a/for循环.html
+++ b/for循环.html
@@ -34,7 +34,7 @@
         for (let i = 0; i < objArr.length; i++) {
             const element = objArr[i];
             // console.log(element);
-            if (i == num) {
+            if (i == nameArray.indexOf('今日最高价')) {
                 continue
             }
             console.log((nameArray[i] ? nameArray[i] : '') + element)
